force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__IsNavigational__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsNavigational__c</fullName>
    <label>Is Navigational</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsNavigational</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>