force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentCategory__c</fullName>
    <label>Parent Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>