force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__ParentCategoryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentCategoryId__c</fullName>
    <label>Parent Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentCategoryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>