force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__rel_1697761194168_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761194168_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCatalog_Id_map_ProductCategor_rel</label>
    <referenceTo>ssot__ProductCatalog__dlm</referenceTo>
    <relationshipLabel>ProductCatalog_Id_map_ProductCategor_rel</relationshipLabel>
    <relationshipName>rel_1697761194168_end</relationshipName>
    <type>Lookup</type>
</CustomField>