force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__rel_1697761194779_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761194779_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategory_Id_map_ProductCatego_rel</label>
    <referenceTo>ssot__ProductCategory__dlm</referenceTo>
    <relationshipLabel>ProductCategory_Id_map_ProductCatego_rel</relationshipLabel>
    <relationshipName>rel_1697761194779_end</relationshipName>
    <type>Lookup</type>
</CustomField>