force-app/main/default/objects/ssot__ProductCategory__dlm/fields/ssot__rel_1697761194912_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761194912_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategory_ProductCatalogId_map_rel</label>
    <referenceTo>ssot__ProductCatalog__dlm</referenceTo>
    <relationshipLabel>ProductCategory_ProductCatalogId_map_rel</relationshipLabel>
    <relationshipName>rel_1697761194912_end</relationshipName>
    <type>Lookup</type>
</CustomField>